# fastq_rs

./: Cargo.toml  Makefile  README.md  release.py
.github/workflows/: ci.yaml
src/: args.rs  dispatch.rs  errors.rs  lib.rs  main.rs
src/common/: errors.rs  files.rs  mod.rs  reader.rs  utils.rs  writer.rs
src/concat/: concat.rs  mod.rs
src/fastq/: parser.rs  utils.rs
src/filter/: filter.rs  mod.rs
src/fq2fa/: fq2fa.rs  mod.rs
src/fq2tab/: fq2tab.rs  mod.rs  plot.rs
src/grep/: grep.rs  mod.rs
src/head/: head.rs  mod.rs
src/mock/: mock.rs  mod.rs
src/renumber/: mod.rs  renumber.rs
src/sample/: mod.rs  sample.rs
src/sanitize/: mod.rs  sanitize.rs
src/sort/: mod.rs  sort.rs  sort_types.rs
src/stats/: mod.rs  stats.rs
src/trim/: mod.rs  plot.rs  trim.rs
tests/: test.rs
