[package]
name = "fastq_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bio = { version = "2.3.0" }
rayon = { version = "1.10.0" }
clap = { version = "4.5.39", features = ["derive"] }
log = { version = "0.4.27" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
simple_logger = { version = "5.0.0" }
flate2 = { version = "1.1.1" }
thiserror = { version = "2.0.12" }
lazy_static = { version = "1.5.0" }
rstest = { version = "0.25.0" }
