[package]
name = "fastq_rs"
version = "0.0.1"
edition = "2024"
authors = ["oscar.aspelin@gmail.com"]
description = "Multi purpose fastq toolkit."
license = "Apache-2.0"
repository = "https://github.com/OscarAspelin95/fastq_rs"
keywords = ["bioinformatics", "fastq"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "fastq_rs"
path = "src/main.rs"

[dependencies]
bio = { version = "2.3.0" }
needletail = { version = "0.6.3", features = ["compression"] }
rayon = { version = "1.11.0" }
clap = { version = "4.5.39", features = ["derive"] }
log = { version = "0.4.27" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
simple_logger = { version = "5.1.0" }
flate2 = { version = "1.1.1" }
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.100" }
lazy_static = { version = "1.5.0" }
rstest = { version = "0.25.0" }
minimizer-iter = { version = "1.2.1" }
rand = { version = "0.9.2" }
regex = { version = "1.12.2" }
